--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "Render",
-  "version": "0.1.0",
-  "private": true,
+  "name": "boilerplate",
+  "version": "1.0.0",
+  "description": "Simple react app",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack --config ./webpack/webpack.config.js",
+    "build:hot": "./node_modules/.bin/webpack --config ./webpack/webpack.config.js -w",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.config.js --hot --inline",
+    "server": "node ./server/server.js"
+  },
+  "author": "Annie Steenson",
+  "license": "",
+  "dependencies": {
+    "express": "^4.13.4",
+    "jquery": "^3.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.3.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2016": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "@sketchpixy/rubix": "^2.0.0",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.26.1",
-    "html-webpack-plugin": "^2.24.1",
-    "node-sass": "^4.1.1",
-    "react-hot-loader": "^1.3.0",
+    "node-sass": "^4.2.0",
+    "react-addons-update": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
-  },
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.5",
-    "express": "^4.14.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
-  },
-  "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack/webpack.config.js",
-    "dev": "./node_modules/.bin/webpack-dev-server --config webpack/webpack.config.js --hot --inline",
-    "server": "node server/app"
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.16.2"
   }
 }
