--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,6 @@
 {
   "presets": [
-    "react",
-    "es2015"
-  ],
-  "plugins": [
-    "syntax-class-properties",
-    "transform-class-properties"
+    "es2015",
+    "react"
   ]
 }
