--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server/app.js",
-    "build": "webpack --config ./webpack/webpack.config.js",
-    "build:hot": "webpack --config ./webpack/webpack.config.js -w",
-    "server": "node ./server/app.js",
-    "server:dev": "webpack-dev-server --config ./webpack/webpack.config.js --hot --inline",
+    "build": "webpack --config ./webpack/webpack.config.js -w",
     "test": "npm run lint && jest"
   },
   "jest": {
@@ -34,13 +31,12 @@
     "ejs": "^2.5.7",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
-    "mongoose": "^4.11.6",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.7.1",
     "redux-act-async": "^1.6.0",
     "redux-logger": "^3.0.6",
