--- a/package.json
+++ b/package.json
@@ -4,22 +4,17 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack --config ./webpack/webpack.config.js",
-    "build:hot": "./node_modules/.bin/webpack --config ./webpack/webpack.config.js -w",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.config.js --hot --inline",
+    "build": "./node_modules/.bin/webpack --config ./webpack/webpack.config.js -w",
     "server": "node ./server/server.js"
   },
   "author": "Annie Steenson",
   "license": "",
   "dependencies": {
     "express": "^4.13.4",
-    "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.3.2"
   },
   "devDependencies": {
-    "@sketchpixy/rubix": "^2.0.0",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-plugin-syntax-class-properties": "^6.13.0",
@@ -27,13 +22,14 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.26.1",
+    "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.2.0",
-    "react-addons-update": "^15.4.2",
-    "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
