--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     ]
   },
   "dependencies": {
-		"body-parser": "^1.17.2",
-		"ejs": "^2.5.7",
-		"express": "^4.15.3",
+    "body-parser": "^1.17.2",
+    "ejs": "^2.5.7",
+    "express": "^4.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.3.2",
-		"react-router-dom": "^4.1.2"
-	},
+  },
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
@@ -41,25 +40,25 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.26.1",
-		"eslint": "^4.1.1",
-		"enzyme": "^2.9.1",
-		"jest": "^20.0.4",
-		"json-loader": "^0.5.7",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.1.1",
+    "jest": "^20.0.4",
+    "json-loader": "^0.5.7",
+    "mocha": "^3.5.0",
     "node-sass": "^4.2.0",
-		"nodemon": "^1.11.0",
-		"prop-types": "^15.5.10",
-		"react-addons-test-utils": "^15.6.0",
-		"react-intl": "^2.3.0",
-		"react-router": "^4.1.1",
-		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.2.0",
-		"redux": "^3.7.1",
+    "nodemon": "^1.11.0",
+    "prop-types": "^15.5.10",
+    "react-addons-test-utils": "^15.6.0",
+    "react-intl": "^2.3.0",
+		"react-router-dom": "^4.1.2",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.1.1",
-		"sinon": "^2.3.5",
-		"style-loader": "^0.13.1",
+    "sinon": "^2.3.5",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.18.2"
-
   }
 }
